Move most env-vars to extension function